welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:4: error: 'while' expected but identifier found.
  compteur=compteur+1
  ^Methods:5: error: '(' expected but ';' found.
  while (estSurBiscuit==false)
^