welcome.lessons.welcome.methods.basics.Methods.scala.code
def goAndGet() {
  var compteur = 0
    do {avance()}
  compteur=compteur+1
  while (estSurBiscuit==false)
  prendBiscuit()
  for (i<-1 to compteur) {recule()}
  poseBiscuit()
  
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}